--- a/views/index.html
+++ b/views/index.html
@@ -12,22 +12,23 @@
 	<main id="app">
 		<section class="form-container">
 			<label for="nickname">Your Nickname (optional)</label>
-			<input type="text" id="nickname" class="nickname" placeholder="What is your nickname?">
+			<input v-model="nickName" type="text" id="nickname" class="nickname" placeholder="What is your nickname?">
 
 			<form>
 				<label for="message">Something to say?</label>
-				<textarea class="message" type="text" autocomplete="off" id="textarea"></textarea>
-				<input type="submit">
+				<textarea v-model="message" class="message" type="text" autocomplete="off" id="textarea"></textarea>
+				<input @click.prevent="dispatchMessage" type="submit">
 			</form>
 		</section>
 
 		<section class="messages">
-			<ul id="messages">
+			<ul id="messages" v-for="message in messages">
 				<!-- render a new message component for every message -->
+				<newmessage :msg="message"></newmessage>
 			</ul>
 		</section>
 	</main>
-	<!-- <script src="/socket.io/socket.io.js"></script> -->
+	<script src="/socket.io/socket.io.js"></script>
 	<script type="module" src="js/main_vm.js"></script>
 </body>
 
